# template-github-action

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  action.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.devcontainer/: .gitignore  devcontainer.json  postAttachCommands.sh  postCreateCommands.sh
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pr_labeler.yml  pull_request_template.md
.github/workflows/: create-requirements.yml  integration.yml  pr.yml  pr_labeler.yml  python.yml  release.yml  tag.yml
src/: app.py
src/github-action/: main.py
src/github_action/: __init__.py  config.py  main.py
src/github_action/libs/: __init__.py  helper.py
tests/: test_app.py
tests/github_action/: test_main.py
tests/github_action/libs/: test_helper.py
