[project]
name = "template-github-action"
version = "1.0.0"
description = "Template Repository"
authors = [
    {name = "Joerg Heinrich",email = "joerg@jfheinrich.eu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "GitPython>=3.1.44",
    "pipreqs>=0.5.0",
]

[project.urls]
homepage = "https://github.com/jfheinrich-eu/template-github-action"
repository = "https://github.com/jfheinrich-eu/template-github-action.git"
documentation = "https://github.com/jfheinrich-eu/template-github-action/README.md"
"Bug Tracker" = "https://github.com/jfheinrich-eu/template-github-action/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.1.1"
flake8 = "^7.2.0"
auto8 = "^0.1.2"
pre-commit = "^4.2.0"
